# ENSSAT-Chaudieres

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  MyApplication  build.ninja  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-78304570359a09957764.json  cache-v2-d0086c4b933bbc5d2d70.json  cmakeFiles-v1-20f82f070cb1d2b3efba.json  cmakeFiles-v1-76495e87b60032c06d31.json  codemodel-v2-14b2ce6cff82c7fee022.json  codemodel-v2-53e59a7d66b6bad0aae0.json  codemodel-v2-6f6dfcdf486513b1538c.json  codemodel-v2-8bd9e6314f9c70c10ea2.json  codemodel-v2-8cabf7627ec9f5e62290.json  codemodel-v2-ce00b1fbf5beead74062.json  codemodel-v2-dd6127ea02182c3e465a.json  index-2024-11-23T13-55-07-0232.json  index-2024-11-24T05-23-45-0720.json  index-2024-11-24T19-24-06-0041.json  index-2024-11-26T03-56-45-0169.json  index-2024-11-26T23-14-34-0338.json  index-2024-11-27T01-19-35-0955.json  index-2024-11-28T03-11-46-0596.json  target-MyApplication-Debug-015aac0ce4ab62ce9de9.json  target-MyApplication-Debug-35c07c1bc6f6d1340446.json  target-MyApplication-Debug-74bf4613f8ea0edc9c9f.json  target-MyApplication-Debug-9d5112eebb6a990ddbcf.json  target-MyApplication-Debug-bfc116f4562ef984ed7c.json  target-MyApplication-Debug-d146a199b86e6137a2df.json  target-MyApplication-Debug-da2adc479abd542e17d2.json
libs/SDL3_image/.github/workflows/: release.yml
libs/SDL3_image/Xcode/SDL_image.xcodeproj/: project.pbxproj
libs/SDL3_image/Xcode/avif/avif.xcodeproj/: project.pbxproj
libs/SDL3_image/Xcode/jxl/jxl.xcodeproj/: project.pbxproj
libs/SDL3_image/Xcode/webp/webp.xcodeproj/: project.pbxproj
libs/SDL3_image/src/: IMG_ImageIO.m
src/: config.c  config.h  main.c  mutex_manager.c  mutex_manager.h  pipes_manager.c  pipes_manager.h  thread_manager.c  thread_manager.h  threads_manager.c  threads_manager.h
src/central_manager/: central_manager.c  central_manager.h  circulare_buffer.c  circulare_buffer.h  values_average.c  values_average.h
src/control_panel/: control_data.c  control_data.h  control_panel_config.c  control_panel_config.h  control_panel_gauge.c  control_panel_gauge.h  control_panel_gui.c  control_panel_gui.h  control_panel_manager.c  control_panel_manager.h  gauge.c  gauge.h  gui.c  gui.h  indicator.c  indicator.h
src/fuel_tank/: fuel_tank_manager.c  fuel_tank_manager.h  fuel_tank_simulation.c  fuel_tank_simulation.h
src/gui/: gauge.c  gui.c  indicator.c  indicator.h  light.c  light.h
src/simulation/: fuel_tank_simulation.c  fuel_tank_simulation.h  tank_simulation.c  tank_simulation.h  water_tank_simulation.c
src/tests/: tests_pipes.c  tests_pipes.h
src/water_tank/: thread_water_level.c  thread_water_level.h  water_tank_manager.c  water_tank_manager.h  water_tank_simulation.c  water_tank_simulation.h  water_valve.c  water_valve.h
(+1 files in other folders)
